# WaveSNet

./: .gitignore  Net_visiable.py  README.md  compute_operations.py  evaluate_valtest.py  launch.sh  mypath.py  requirements.txt  test_parse.py  train.py
DWT_IDWT/: DWT_IDWT_CS.py  DWT_IDWT_Functions.py  DWT_IDWT_layer.py
SamplingOperations/: sampling.py
SegNet_UNet/: U_Net.py  WU_NET3D.py  WU_Net_3D.py  __init__.py
WDeepLabV3Plus/: Net_visiable.py
dataloaders/: __init__.py
dataloaders/datasets/: med.py  pascal.py
polyaxon-template/: .gitignore  .polyaxonignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
polyaxon-template/.devcontainer/: devcontainer.json
polyaxon-template/makefiles/: Makefile.docker  Makefile.polyaxon  Makefile.run
polyaxon-template/package/: main.py
polyaxon-template/polyaxon/: config.cfg  pass.txt.novalues  polyaxonfile.group.yaml  polyaxonfile.yaml  tensorboard.yml
polyaxon-template/scripts/: polyaxon-config.sh
polyaxon-template/vpn-config/: ifl-cluster.ovpn  pass.txt.novalues
utils/: evaluate.py  make_path.py  net_visiable.py  printer.py  summaries.py
